--- a/VRChat/47/1346847.html
+++ b/VRChat/47/1346847.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0oitH+c66qvjG9DX6mC8TgVFOeLTWIXWj/ySUguJ6IE="></script>
+    "k+GmRkJ3l7Z7aj/TFP9t6B1djKDzcrd9yJ7ONdfAbYc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC用】少年型アバター","description":"VRChat用アバター\n\n■仕様\n少年型アバター：\n　14828ポリゴン\n　リップシンク有り\n　アイトラッキング有り\n　表情用シェイプキー有り\n　（表情用animファイル通常11種類、ゲス顔6種類）\n　素体有\n　Arktoon-Shaders v1.0.2.4使用\n　VRM版有\n\nVroid Hubにも公開しているので、全身グリグリ見たい方はこちらから。\nhttps://hub.vroid.com/characters/4505487392003036662/models/1149675935460637457\n\n■利用規約\n・収録されているデータについて権利は配布元が有しております。\n・改変しての利用可です。\n・VRCHATでの利用でクレジット表記などの必要はありません。\n・VRCHAT内での利用、商用配信に映る場合に制限は設けません。\n・コンテンツ作成で商用非商用、全年齢・R18問わず使用可です。\n・許可なく再配布することは禁止です。\n・政治的パフォーマンス、宗教活動、ヘイトスピーチ、他者への嫌がらせ行為、その他公序良俗に反する目的で使用することを禁止します\n・本データを使用したことにより発生した問題、損失について配布元は一切の責任を負いません\n　","url":"https://booth.pm/ja/items/1346847","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/0adee944-20a4-4964-9f9d-2490cbfecd89/i/1346847/541b7b6a-621f-4567-bf62-edfae0024175_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0oitH+c66qvjG9DX6mC8TgVFOeLTWIXWj/ySUguJ6IE="></script>
+    nonce="k+GmRkJ3l7Z7aj/TFP9t6B1djKDzcrd9yJ7ONdfAbYc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1346847/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1346847/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
