--- a/VRChat/71/1346071.html
+++ b/VRChat/71/1346071.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8xpcDWEN7ohso7+eGJvteUuFWA1bOUUHka8WOIpRuLI="></script>
+    "EvvWpQoJnTMyc2P6Ljs1GLMnrmEwBmxBhIvLiXbUA7o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オーロラ【3Dモデル】","description":"【前提】本モデルは「アズールレーン」二次創作に関するガイドライン\nに沿って制作しています。\nhttps://www.azurlane.jp/news-item.html?i=1010\n\n【参考URL】\n↓以下のようなモデルになります。\nhttps://hub.vroid.com/characters/482937411978556544/models/6109505983491778161\n\n■仕様(specification)：\nポリゴン数(Polygones)：39293\n対応シェイプキー(ShapeKey)：\n・Neutral\n・A\n・I\n・U\n・E\n・O\n・Joy\n・Fun\n・Angry\n・Sorrow\n・Blink_L\n・Blink_R\n\n■利用規約\n・データ改変はガイドラインの範囲内で可能です。\n・VRChatアバターペデスタルはNGです。\n・ご使用、ご利用の報告、クレジット記載は任意です。\n（報告していただけたらすごく喜びます（＾＾））\n・使用によるトラブル等には一切責任を負いません。\n\n■禁止事項\n・再配布、転売は禁止です。\n・違法、公序良俗に違反する媒体への使用禁止\n\n[English]\n■Premise\n・This model is a guideline for \"Azur Lane\" secondary creation\nI am producing along.\n\n■ Terms of use\n・ Data modification is possible within the scope of the guidelines.\n・ VRChat avatar pedestal is NG.\n・ The use, report on use, credit entry is optional.\n(I am very pleased if you report it (^ ^))\n・I will not be responsible for troubles etc. by use at all.\n\n\n■ Prohibited items\n・ Redistribution and resale are prohibited.\n・ Prohibition of use on illegal, violating public order and morals\n\n","url":"https://booth.pm/ja/items/1346071","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/4644c3b8-7323-49ec-884d-8226954b89c6/i/1346071/24dcdd4b-ad7e-4824-bc1b-066c16710bc5_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8xpcDWEN7ohso7+eGJvteUuFWA1bOUUHka8WOIpRuLI="></script>
+    nonce="EvvWpQoJnTMyc2P6Ljs1GLMnrmEwBmxBhIvLiXbUA7o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1346071/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1346071/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
