--- a/VRChat/26/1345826.html
+++ b/VRChat/26/1345826.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "92UuPaW+3blK/fbdj01CusTmwS94P2i3LM0tou2tREg="></script>
+    "piXEbvM1PVVjfvZrw0k1+4MeJt0IGgm5hgGa0rPi9AY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル　うちわ","description":"本モデルはそのまま使用可能な他、ダイナミックボーンを設定することで動きを付けられるようになっています。\n設定例は添付画像にて提示しておりますが、好みでご設定ください。\n（曲げすぎると破綻するのであしからず）\n\nまた、ダイナミックボーンで髪を制御している場合、本モデル先端部にコライダーを設定することで、「それっぽい」挙動に似せることができます。\n\nうちわの模様はお好きな画像をお使いください。\n\n\n私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/1345826","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e744eeac-3eef-408c-8011-89c5b4908b13/i/1345826/4de29d18-79a6-482d-bd49-078b3e8ebe89_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="92UuPaW+3blK/fbdj01CusTmwS94P2i3LM0tou2tREg="></script>
+    nonce="piXEbvM1PVVjfvZrw0k1+4MeJt0IGgm5hgGa0rPi9AY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1345826/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1345826/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
