--- a/VRChat/15/1338415.html
+++ b/VRChat/15/1338415.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3Xz88kKXLwWpfbtq+/jQst2pmQT4Lg6GYSh+ZkTXokE="></script>
+    "1Ce0HAR9BSKJOKfc/5weYUk6+JUeRvxS+PM5TvsFQBI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat] オリジナル３Dモデル RINA","description":"\nVRChat向 オリジナル３DモデルのRINAちゃんです\n金髪ポニーテールの元気な女の子のキャラクターです\n\n[概要]\n\nポリゴン数 　: 31439\nEye_Tracking : ○\nVRchat用Lip_sync : ○  \nフルトラッキング : ○\nDynamic Bone 　：服,髪のみ対応\n\n[内容物]\n\nRina_unitypackage\n -3Dモデルデータfbx）\n -カラーテクスチャ(.png)、ノーマルマップ(.png)\n -Arktoon-Shader ver1.0.2.4\n -VRchat用 アニメーション\u0026\nReadme\n\n[利用範囲]\n\nゲームや映像作品に使用することができます\nモデルデータ、テクスチャなどの改変行為には制限を設けていません\n商用利用の場合、クレジット記載が必須となります\nこのモデルを使用することにより、発生する問題や損失について[ROBO2947]は責任を負いません\nR-18やR-18Gに関しての規制は特にありません\n\n[禁止事項]\n\n本モデルを改造した場合を含み、再配布,販売することを禁止します\n政治、宗教的行為に使用することを禁止します\n他人を侮辱したり、他人に被害を及ぼしうる行為への利用を禁止します\nアバターペデスタルでの使用を禁止します\n\n問題や修正がある場合はご連絡してください\n\n[連絡先]\n\nTwitter@ROBAN56789","url":"https://booth.pm/ja/items/1338415","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8b13c07a-b70a-4237-af7f-5c43957d8678/i/1338415/42e32d41-e6fe-444d-b311-f13da4f9328b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3Xz88kKXLwWpfbtq+/jQst2pmQT4Lg6GYSh+ZkTXokE="></script>
+    nonce="1Ce0HAR9BSKJOKfc/5weYUk6+JUeRvxS+PM5TvsFQBI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1338415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1338415/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
