--- a/VRChat/13/1344813.html
+++ b/VRChat/13/1344813.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3JTBjiiU2PkfYq5pFFJlv6lyN61n8E6dilCSWdqqLKE="></script>
+    "hFyp1cHn50aYxMQurTnZH8I2PF1SMAN8WeKGrHKA1gU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Unity】LSaber Model LS001～LS003","description":"例のセーバーです。\n過去Twitter上で配布していたものを改訂した内容になっています。\n3本セットです。\n既存のDynamicBoneトレイルに加え、新機能の「LS Trail Shader」を搭載しています。\n不明点があればTwitter(@tsutsuji815)まで","url":"https://booth.pm/ja/items/1344813","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1344813/65c2d4a4-6413-4008-84ee-0efc320e9310_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3JTBjiiU2PkfYq5pFFJlv6lyN61n8E6dilCSWdqqLKE="></script>
+    nonce="hFyp1cHn50aYxMQurTnZH8I2PF1SMAN8WeKGrHKA1gU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1344813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1344813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               378
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
