--- a/VRChat/38/1344638.html
+++ b/VRChat/38/1344638.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bdmQBmtNJwnxAr94K76rKZwDzVaDUPkr8ehGWtzz30g="></script>
+    "QqLbIUsJP1u9ynr9PGVe1LiGRXcIyVpfb5QTAS9AI48="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル：主力量産機「ゲ・スゥ」","description":"VRChatやunityで使う事を想定したオリジナルロボットモデル\n自分が知っている範囲ではいそうでいなかった敵主力量産機をイメージした「ゲ・スゥ」\n同梱するVRMモデルはambrでも使用が可能です\n\n2019/05/26：\nアップデートしました\nバックパックや携行武器のモデルを追加\n本体モデルのみならOculusQuestでも行けることを確認しました\n\n2019/05/30\nリリス・AH・リリーホワイトさんの3Dモデル アセンブリツール「ICAROS」に対応することを想定した分割モデルデータを追加しました\nhttps://lilith-lilywhite.booth.pm/items/1392689\n\n2019/09/21\nVket3仕様のモデルデータ追加＆既存モデルのアップデート\n本体にリップシンクで目を点滅させるためのシェイプキー追加\nAtelier Alcaさんで発売中の\"I-s(アイズ)\"向けのアーマーモデルを追加\nhttps://atelier-alca.booth.pm/items/1572567\n\n2020/01/28\nふぃぎゅあばたー参加モデル化\n","url":"https://booth.pm/ja/items/1344638","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1344638/9794bcb7-40da-49cb-9531-22f48fe6df5c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bdmQBmtNJwnxAr94K76rKZwDzVaDUPkr8ehGWtzz30g="></script>
+    nonce="QqLbIUsJP1u9ynr9PGVe1LiGRXcIyVpfb5QTAS9AI48="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1344638/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1344638/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               38
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
